Update Cargo.toml package details

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,12 @@
 [package]
-name = "sexpattern"
+name = "sexpr"
 version = "0.1.0"
 authors = ["Zephyr Pellerin <zv@nxvr.org>"]
+license = "MIT/Apache-2.0"
+description = "Multi-format S-expression serialization/deserialization support"
+repository = "https://github.com/zv/sexpr"
+keywords = ["sexp","s-exp","sexpr","smtlib"]
+documentation = "https://zv.github.io/rust/sexpr"
 
 [dependencies]
 clippy = {version = "*", optional = true}
