Don't build documentation for local binaries

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,6 @@ documentation = "https://zv.github.io/rust/sexpr"
 [dependencies]
 clippy = {version = "*", optional = true}
 
+[[bin]]
+name = "main"
+doc = false
