--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,10 +9,15 @@ keywords = ["sexp","s-exp","sexpr","smtlib"]
 documentation = "https://zv.github.io/rust/sexpr"
 
 [dependencies]
-clippy = {version = "*", optional = true}
-rustc-serialize = "0.3"
-serde = "1.0.2"
-serde_derive = "1.0.2"
+serde = "1.0"
+num-traits = "0.1.32"
+itoa = "0.3"
+dtoa = "0.4"
+
+[dev-dependencies]
+compiletest_rs = "0.2"
+serde_bytes = "0.10"
+serde_derive = "1.0"
 
 [[bin]]
 name = "main"
