Update Cargo version

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,13 @@
 [package]
 name = "sexpr"
-version = "0.1.0"
+version = "0.7.0"
 authors = ["Zephyr Pellerin <zv@nxvr.org>"]
 license = "MIT/Apache-2.0"
 description = "Multi-format S-expression serialization/deserialization support"
 repository = "https://github.com/zv/sexpr"
 keywords = ["sexp","s-exp","sexpr","smtlib"]
+categories = ["encoding"]
+readme = "README.org"
 documentation = "https://zv.github.io/rust/sexpr"
 
 [dependencies]
